# fpga_project

./: .gitignore  analyzer_top.v  can_top.v  can_tx_periodic.py  i2c_decoder.v  uart_decoder.v
Protocol_Decoder.srcs/constrs_1/new/: master.xdc
protocol_transmitter/: Cargo.toml  README.md  rust-toolchain.toml
protocol_transmitter/.cargo/: config.toml
protocol_transmitter/src/: main.rs
